# agoraoracle

./: .env.example  .gitignore  DEPLOYMENT.md  LANDING_PAGE_README.md  README.md  api-implementation-reference.md  data-flow-architecture.md  design_guidelines.md  docker-compose.yml  implementation-guide.md  project_description.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13efaaefd519_initial_migration_with_users_and_.py  1a3f9729c395_add_game_statistics_fields_to_waitlist_.py
backend/app/: main.py
backend/app/api/: __init__.py  users.py  waitlist.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  user.py  waitlist.py
backend/app/schemas/: __init__.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.css  index.css
frontend/src/components/game/: BetHistory.tsx  BettingControls.tsx  GameStats.tsx  PriceChart.tsx  WaitlistOverlay.tsx  index.ts
frontend/src/components/landing/: BitcoinGameSection.tsx  FAQSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navigation.tsx  PricingPreviewSection.tsx  SignupSection.tsx
frontend/src/hooks/: useBinanceWebSocket.ts  useGameStatePersistence.ts  useUsers.ts  useWaitlistGame.ts
frontend/src/pages/: LandingPage.tsx
frontend/src/types/: game.ts
